[GStreamer] Fix EME build for GStreamer 1.14.x https://bugs.webkit.org/show_bug.cgi?id=190471

Reviewed by Xabier Rodriguez-Calvar.

* platform/graphics/gstreamer/eme/WebKitCommonEncryptionDecryptorGStreamer.cpp:
(webkitMediaCommonEncryptionDecryptTransformCaps): The
GST_PROTECTION_UNSPECIFIED_SYSTEM_ID #define won't be shipped
until the GStreamer 1.16.0 release, so its use needs to be wrapped
between a version check.
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::MediaPlayerPrivateGStreamerBase::initializationDataEncountered): Ditto.

Canonical link: https://commits.webkit.org/205466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237092 268f45cc-cd09-0410-ab3c-d52691b4dbfc